frontend-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - frontend.104.215.138.210.nip.io
    secretName: frontend-tls-secret
  rules:
  - host: frontend.104.215.138.210.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
